[package]
name = "BLOCKCHAIN-SIM-RUST"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["image"] }
sha256 = "1.6.0"
lazy_static = "1.5.0"
mini-redis = "0.4.1"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
iced_aw = "=0.12.2"
theme = "0.0.3"
futures = "0.3.31"
